# PAG_UJA

./: .gitignore  CMakeLists.txt  Model.cpp  Model.h  README.md  Renderer.cpp  Renderer.h  main.cpp
Shaders/: pag03-fs.glsl  pag03-vs.glsl  pag03fragmentShader.glsl  pag04-vs.glsl  pag07-fs.glsl  pag07-vs.glsl  pag08-fs.glsl  pag08-vs.glsl  pag09-fs.glsl  pag09-vs.glsl  pag10-fs.glsl  pag10-vs.glsl
Utilities/: Camera.cpp  Camera.h  GUI.cpp  GUI.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ShaderObject.cpp  ShaderObject.h  ShaderProgram.cpp  ShaderProgram.h
imgui/: imconfig.h  imfilebrowser.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
